# VoxelEngine

./: CMakeLists.txt  run.bat
assets/: crosshair.frag  crosshair.vect  shader.vect
src/: main.cpp
src/graphics/: VoxelRenderer.cpp  VoxelRenderer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/lib/glm/detail/: glm.cpp
src/loaders/: png.cpp  png.hpp
src/voxels/: chunk.cpp  chunk.hpp  chunks.cpp  chunks.hpp  voxel.hpp
src/window/: Camera.cpp  Camera.hpp  Events.cpp  Events.hpp  Window.cpp  Window.hpp
